<resources xmlns:tools="http://schemas.android.com/tools"
	xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_desc">"Simple, powerful, Pro SSH client."</string>
	<string name="service_desc">"Maintains SSH connections and loaded pubkeys"</string>
	<string name="title_hosts_list">"Hosts"</string>
	<string name="title_pubkey_list">"Pubkeys"</string>
	<string name="title_port_forwards_list">"Port forwards"</string>
	<string name="title_host_editor">"Edit Host"</string>
	<string name="title_help">"Help"</string>
	<string name="title_colors">"Colors"</string>
	<string name="title_color_picker">"Pick a color"</string>
	<string name="title_settings">Settings</string>
	<string name="title_pubkey_generate">Generate</string>
	<string name="help_intro">"Please select a topic below for more information on a particular subject."</string>
	<string name="terms_and_conditions">"Terms &amp; Conditions"</string>
	<string name="hints">"Hints"</string>
	<string name="host_shortcuts_header">"Host Shortcuts"</string>
	<string name="host_shortcuts_content">"Long-press on your Android desktop to create direct shortcuts to frequently-used SSH hosts."</string>
	<string name="scroll_hints_header">"Scroll back / Scroll forward"</string>
	<string name="scroll_hints_content">"Swiping your finger up on the right side of the screen allows you to scroll backward and forward in the local terminal buffer history."</string>
	<string name="scrolling_back">"Scrolling back"</string>
	<string name="scrolling_forward">"Scrolling forward"</string>
	<string name="page_updn_header">"Page Up / Page Down"</string>
	<string name="page_updn_content">"NOTE: This must be enabled in settings."\n\n"Swiping your finger up and down on the left third of the screen	will send a page up and page down key to the remote host. Many programs	map this to scrolling back into history such as irssi or tinyfugue."</string>
	<string name="page_up">"Page up"</string>
	<string name="page_down">"Page down"</string>
	<string name="switching_hosts_header">"Switching Hosts"</string>
	<string name="switching_hosts_content">"Swiping your finger from one side of the screen to the other will switch between currently connected hosts."</string>
	<string name="next_host">"Next host"</string>
	<string name="prev_host">"Previous host"</string>
	<string name="keyboard_shortcuts">"Keyboard Shortcuts"</string>
	<string name="increase_font_size">"Increase Font Size"</string>
	<string name="increase_font_shortcut">Ctrl and +</string>
	<string name="decrease_font_size">"Decrease Font Size"</string>
	<string name="decrease_font_shortcut">Ctrl and -</string>
	<string name="paste_shortcut">Ctrl-Shift-V</string>
	<string name="pubkey_generate">"Generate"</string>
	<string name="pubkey_delete">"Delete key"</string>
	<string name="pubkey_gather_entropy">"Gathering Entropy"</string>
	<string name="pubkey_touch_prompt">"Touch this box to gather randomness: %1$d%% done"</string>
	<string name="pubkey_touch_hint">"In order to assure randomness during the key generation, move your finger randomly over the box below."</string>
	<string name="pubkey_generating">"Generating key pair…"</string>
	<string name="pubkey_copy_private">"Copy private key"</string>
	<string name="pubkey_copy_public">"Copy public key"</string>
	<string name="pubkey_list_empty">"Tap \"Menu\" to create"\n"or import key pairs."</string>
	<string name="pubkey_unknown_format">"Unknown format"</string>
	<string name="pubkey_change_password">"Change password"</string>
	<string name="pubkey_list_pick">"Pick from /sdcard"</string>
	<string name="pubkey_import_parse_problem">"Problem parsing imported private key"</string>
	<string name="pubkey_unlock">"Unlock key"</string>
	<string name="pubkey_failed_add">"Bad password for key '%1$s'. Authentication failed."</string>
	<string name="pubkey_memory_load">"Load into memory"</string>
	<string name="pubkey_memory_unload">"Unload from memory"</string>
	<string name="pubkey_load_on_start">"Load key on start"</string>
	<string name="pubkey_confirm_use">"Confirm before use"</string>
	<string name="portforward_list_empty">"Tap \"Menu\" to create"\n"port forwards."</string>
	<string name="portforward_edit">"Edit port forward"</string>
	<string name="portforward_delete">"Delete port forward"</string>
	<string name="prompt_nickname">"Nickname:"</string>
	<string name="prompt_nickname_hint_pubkey">"My work key"</string>
	<string name="prompt_source_port">"Source port:"</string>
	<string name="prompt_destination">"Destination:"</string>
	<string name="prompt_old_password">"Old password:"</string>
	<string name="prompt_password">"Password:"</string>
	<string name="prompt_again">"(again)"</string>
	<string name="prompt_type">"Type:"</string>
	<string name="prompt_password_can_be_blank">"Note: password can be blank"</string>
	<string name="prompt_bits">"Bits:"</string>
	<string name="prompt_pubkey_password">"Password for key '%1$s'"</string>
	<string name="prompt_allow_agent_to_use_key">"Allow remote host to"\n"use key '%1$s'?"</string>
	<string name="host_verification_failure_warning_header">"WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!"</string>
	<string name="host_verification_failure_warning">"IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!"\n"Someone could be eavesdropping on you right now (man-in-the-middle attack)!"\n"It is also possible that the host key has just been changed."</string>
	<string name="prompt_host_disconnected">"Host has disconnected."\n"Close session?"</string>
	<string name="prompt_continue_connecting">"Are you sure you want"\n"to continue connecting?"</string>
	<string name="host_authenticity_warning">"The authenticity of host '%1$s' can't be established."</string>
	<string name="host_fingerprint">"Host %1$s key fingerprint is %2$s"</string>
	<string name="alert_passwords_do_not_match_msg">"Passwords do not match!"</string>
	<string name="alert_wrong_password_msg">"Wrong password!"</string>
	<string name="alert_key_corrupted_msg">"Private key appears corrupt!"</string>
	<string name="alert_sdcard_absent">"SD card is not inserted!"</string>
	<string name="button_change">"Change"</string>
	<string name="button_resize">"Resize"</string>
	<string name="alert_disconnect_msg">"Connection Lost"</string>
	<string name="pref_emulation_category">"Terminal emulation"</string>
	<string name="pref_emulation_title">"Emulation mode"</string>
	<string name="pref_emulation_summary">"Terminal emulation mode to use for PTY connections"</string>
	<string name="pref_scrollback_title">"Scrollback size"</string>
	<string name="pref_scrollback_summary">"Size of scrollback buffer to keep in memory for each console"</string>
	<string name="pref_backupkeys_title">Backup pubkeys</string>
	<string name="pref_backupkeys_summary">Keep back-ups of the private keys using Android\'s backup mechanism</string>
	<string name="pref_ui_category">"User interface"</string>
	<string name="pref_rotation_title">"Rotation mode"</string>
	<string name="pref_rotation_summary">"How to change rotation when keyboard popped in/out"</string>
	<string name="pref_titlebarhide_title">"Autohide title bar"</string>
	<string name="pref_titlebarhide_summary">"Tap console to show title bar and access menu"</string>
	<string name="pref_alwaysvisible_title">Special keys always visible</string>
	<string name="pref_pg_updn_gesture_title">"Page up/down gesture"</string>
	<string name="pref_pg_updn_gesture_summary">"Swipe the left third of the screen to send pg up/dn to the terminal"</string>
	<string name="pref_fullscreen_title">"Full screen"</string>
	<string name="pref_fullscreen_summary">"Hide status bar while in console"</string>
	<string name="pref_keyboard_category">"Keyboard"</string>
	<string name="pref_shiftfkeys_title">"Shift+num are F-keys"</string>
	<string name="pref_shiftfkeys_summary">"On hardware keyboards, number keys send F1-F10 with shift"</string>
	<string name="pref_ctrlfkeys_title">"Ctrl+num are F-keys"</string>
	<string name="pref_ctrlfkeys_summary">"On software keyboards, number keys send F1-F10 with ctrl"</string>
	<string name="pref_volumefont_title">"Volume keys change font size"</string>
	<string name="pref_volumefont_summary">"Font size can also be changed in per-host settings"</string>
	<string name="pref_memkeys_title">"Remember keys in memory"</string>
	<string name="pref_memkeys_summary">"Keep unlocked keys in memory until backend service is terminated"</string>
	<string name="pref_conn_persist_title">"Persist connections"</string>
	<string name="pref_conn_persist_summary">"Force connections to stay connected while in background"</string>
	<string name="pref_keymode_title">"Directory shortcuts"</string>
	<string name="pref_keymode_summary">"Select how to use Alt for '/' and Shift for Tab"</string>
	<string name="pref_stickymodifiers_title">"Sticky modifiers"</string>
	<string name="pref_stickymodifiers_summary">"Modifier keys remain enabled until another key is pressed"</string>
	<string name="only_alt">"Only alt"</string>
	<string name="pref_camera_title">"Camera shortcut"</string>
	<string name="pref_camera_summary">"Select which shortcut to trigger when the camera button is pushed"</string>
	<string name="pref_keepalive_title">"Keep screen awake"</string>
	<string name="pref_keepalive_summary">"Prevent the screen from turning off when working in a console"</string>
	<string name="pref_wifilock_title">"Keep Wi-Fi active"</string>
	<string name="pref_wifilock_summary">"Prevent Wi-Fi from turning off when a session is active"</string>
	<string name="pref_bumpyarrows_title">"Bumpy arrows"</string>
	<string name="pref_bumpyarrows_summary">"Vibrate when sending arrow keys; useful for laggy connections"</string>
	<string name="pref_bell_category">"Terminal bell"</string>
	<string name="pref_bell_title">"Audible bell"</string>
	<string name="pref_bell_volume_title">"Bell volume"</string>
	<string name="pref_bell_vibrate_title">"Vibrate on bell"</string>
	<string name="pref_bell_notification_title">"Background notifications"</string>
	<string name="pref_bell_notification_summary">"Send notification when a terminal running in the background sounds a bell."</string>
	<string name="list_keymode_right">"Use right-side keys"</string>
	<string name="list_keymode_left">"Use left-side keys"</string>
	<string name="list_keymode_none">"Disable"</string>
	<string name="list_pubkeyids_none">"Do not use keys"</string>
	<string name="list_pubkeyids_any">"Use any unlocked key"</string>
	<string name="hostpref_nickname_title">"Nickname"</string>
	<string name="hostpref_fontsize_title">"Font size (pt)"</string>
	<string name="hostpref_pubkeyid_title">"Use pubkey authentication"</string>
	<string name="hostpref_authagent_title">"Use SSH auth agent"</string>
	<string name="hostpref_compression_title">"Compression"</string>
	<string name="hostpref_compression_summary">"This may help with slower networks"</string>
	<string name="hostpref_stayconnected_title">"Stay connected"</string>
	<string name="hostpref_stayconnected_summary">"Try to reconnect to host if disconnected"</string>
	<string name="hostpref_quickdisconnect_title">"Close on disconnect"</string>
	<string name="hostpref_quickdisconnect_summary">"Close immediately after remote disconnect without prompting."</string>
	<string name="hostpref_delkey_title">"DEL Key"</string>
	<string name="hostpref_encoding_title">"Encoding"</string>
	<string name="hostpref_username_title">"Username"</string>
	<string name="hostpref_hostname_title">"Host"</string>
	<string name="hostpref_port_title">"Port"</string>
	<string name="console_menu_paste">"Paste"</string>
	<string name="button_yes">"Yes"</string>
	<string name="button_no">"No"</string>
	<string name="terminal_no_hosts_connected">"No hosts currently connected"</string>
	<string name="hostpref_authagent_with_confirmation">require confirmation</string>
	<string name="use_any_key">Use any key</string>
	<string name="delete">Delete</string>
</resources>