<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<SwitchPreferenceCompat
		android:key="memkeys"
		android:title="@string/pref_memkeys_title"
		android:summary="@string/pref_memkeys_summary"
		android:defaultValue="false"
		/>

	<SwitchPreferenceCompat
		android:key="connPersist"
		android:title="@string/pref_conn_persist_title"
		android:summary="@string/pref_conn_persist_summary"
		android:defaultValue="false"
		/>

	<SwitchPreferenceCompat
		android:key="wifilock"
		android:title="@string/pref_wifilock_title"
		android:summary="@string/pref_wifilock_summary"
		android:defaultValue="false"
		/>

	<PreferenceCategory
		android:title="@string/pref_ui_category">

		<SwitchPreferenceCompat
			android:key="pgupdngesture"
			android:title="@string/pref_pg_updn_gesture_title"
			android:summary="@string/pref_pg_updn_gesture_summary"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="volumefont"
			android:title="@string/pref_volumefont_title"
			android:summary="@string/pref_volumefont_summary"
			android:defaultValue="true"
			/>

		<SwitchPreferenceCompat
			android:key="keepalive"
			android:title="@string/pref_keepalive_title"
			android:summary="@string/pref_keepalive_summary"
			android:defaultValue="true"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_keyboard_category">

		<SwitchPreferenceCompat
			android:key="alwaysvisible"
			android:title="@string/pref_alwaysvisible_title"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="shiftfkeys"
			android:title="@string/pref_shiftfkeys_title"
			android:summary="@string/pref_shiftfkeys_summary"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="ctrlfkeys"
			android:title="@string/pref_ctrlfkeys_title"
			android:summary="@string/pref_ctrlfkeys_summary"
			android:defaultValue="false"
			/>



	</PreferenceCategory>

</PreferenceScreen>
